# kumori

./: CMakeLists.txt  README.md  desktop.pro  dirwatcher.h  iconextractor.cpp  iconextractor.h  kumori.cpp  kumori.h  kumori.pro  launcher.cpp  launcher.h  main.cpp  ohm.cpp  ohm.h  shelliconprovider.cpp  shelliconprovider.h  wallpaper.cpp  wallpaper.h  win.cpp  win.h
kumori/: ContrastFilter.qml  Launcher.qml  MainWindow.qml  Root.qml  SquareFilter.qml  Youbi.qml  scanline.frag  square.frag
qml/: CanvasMenu.qml  Circle.qml  HardwareInfo.qml  Launcher.qml  MainWindow.qml  Root.qml  Youbi.qml  circle.frag  main.qml  scanline.frag  textcontrast.frag  youbi.frag
qml/kumori/: Circle.qml  ContrastFilter.qml  Ducks.qml  HardwareInfo.qml  Launcher.qml  SquareFilter.qml  Youbi.qml  circle.frag  ducks.frag  qmldir  square.frag  textcontrast.frag
src/: dirwatcher.cpp  dirwatcher.h  kumori.cpp  main.cpp  shelliconprovider.h  wallpaper.h  winsearch.cpp
src/qml/: main.qml  scanline.frag
src/qml/fluidsim/: display.frag  fluid.frag  init.frag
src/qml/kumori/: BlendEq.qml  Circle.qml  ContrastFilter.qml  Ducks.qml  DucksSettings.qml  HardwareInfo.qml  Launcher.qml  SquareFilter.qml  TaskBar.qml  Youbi.qml  blend.frag  circle.frag  ducks.frag  qmldir  textcontrast.frag
src/qmltypes/: kumori.cpp  kumori.h  wallpaper.cpp  wallpaper.h
src/qmltypes/shaderpipeline/: pipelinerenderer.cpp  pipelinerenderer.h  shaderpipeline.cpp  shaderpipeline.h
src/win32/: ohm.cpp  ohm.h  shelliconprovider.cpp  shelliconprovider.h  winsearch.cpp  winsearch.h
src/win32/taskbar/: appbarwindow.cpp  appbarwindow.h  liveicon.cpp  liveicon.h  nativewindow.cpp  nativewindow.h  trayicon.cpp  trayicon.h  trayservice.cpp  trayservice.h  wmservice.cpp  wmservice.h
